Added Informational Version as a tooltip

--- a/CustomAuthenticationApp/CustomAuthenticationApp.csproj
+++ b/CustomAuthenticationApp/CustomAuthenticationApp.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\js\interop.js">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
